working solution for gcc / clang support

--- a/basics/keywords/CMakeLists.txt
+++ b/basics/keywords/CMakeLists.txt
@@ -4,8 +4,16 @@ cmake_minimum_required(VERSION 3.17)
 
 project(coro-keywords CXX)
 
-include("../../cmake/set_coro_options.cmake")
+include("../../cmake/coro_config.cmake")
 
-add_executable(await "co_await.cpp")
-target_compile_options(await PRIVATE ${CORO_OPTIONS})
+add_executable(await "await.cpp")
+target_link_libraries(await PRIVATE coro_config)
 target_include_directories(await PRIVATE "../../config")
+
+add_executable(return "return.cpp")
+target_link_libraries(return PRIVATE coro_config)
+target_include_directories(return PRIVATE "../../config")
+
+add_executable(yield "yield.cpp")
+target_link_libraries(yield PRIVATE coro_config)
+target_include_directories(yield PRIVATE "../../config")
