fix some lifetime issues in when_all, nearly there

--- a/algorithms/when-all/CMakeLists.txt
+++ b/algorithms/when-all/CMakeLists.txt
@@ -6,6 +6,7 @@ project(coro-when-all CXX)
 
 include("../../cmake/coro_config.cmake")
 
-add_executable(test "test.cpp")
-target_link_libraries(test PRIVATE coro_config)
-target_include_directories(test PRIVATE "../../config")
+add_executable(example0 "example0.cpp")
+target_link_libraries(example0 PRIVATE coro_config)
+target_include_directories(example0 PRIVATE "../../config")
+target_compile_options(example0 PRIVATE "-ggdb")
