updates to composition experiements after refector

--- a/basics/composition/CMakeLists.txt
+++ b/basics/composition/CMakeLists.txt
@@ -6,14 +6,14 @@ project(coro-composition CXX)
 
 include("../../cmake/coro_config.cmake")
 
+add_subdirectory("../../libcoro" ${CMAKE_CURRENT_BINARY_DIR}/libcoro)
+add_subdirectory("../../stdcoro" ${CMAKE_CURRENT_BINARY_DIR}/stdcoro)
+
 add_executable(example0 "example0.cpp")
-target_link_libraries(example0 PRIVATE coro_config)
-target_include_directories(example0 PRIVATE "../../config")
+target_link_libraries(example0 PRIVATE coro_config libcoro stdcoro)
 
 add_executable(example1 "example1.cpp")
-target_link_libraries(example1 PRIVATE coro_config)
-target_include_directories(example1 PRIVATE "../../config")
+target_link_libraries(example1 PRIVATE coro_config libcoro stdcoro)
 
 add_executable(example2 "example2.cpp")
-target_link_libraries(example2 PRIVATE coro_config)
-target_include_directories(example2 PRIVATE "../../config")
+target_link_libraries(example2 PRIVATE coro_config libcoro stdcoro)
