update timers with kqueue for new compiler warnings and build setup

--- a/applications/timers/osx-kqueue/CMakeLists.txt
+++ b/applications/timers/osx-kqueue/CMakeLists.txt
@@ -2,13 +2,15 @@
 
 cmake_minimum_required(VERSION 3.17)
 
-project(coro-timer-osx-kqueue CXX)
+project(osx-kqueue CXX)
 
 include("../../../cmake/coro_config.cmake")
 
+add_subdirectory("../../../libcoro" ${CMAKE_CURRENT_BINARY_DIR}/libcoro)
+add_subdirectory("../../../stdcoro" ${CMAKE_CURRENT_BINARY_DIR}/stdcoro)
+
 add_executable(vanilla "vanilla.cpp")
-target_link_libraries(vanilla PRIVATE coro_config)
+target_link_libraries(vanilla PRIVATE coro_config libcoro stdcoro)
 
 add_executable(awaitable "awaitable.cpp")
-target_link_libraries(awaitable PRIVATE coro_config)
-target_include_directories(awaitable PRIVATE "../../../config/")
+target_link_libraries(awaitable PRIVATE coro_config libcoro stdcoro)
