--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/benchmark"]
 	path = deps/benchmark
 	url = git@github.com:google/benchmark.git
+[submodule "deps/catch2"]
+	path = deps/catch2
+	url = git@github.com:catchorg/Catch2.git
