support for single lookup with both subroutine and coroutine models, now just need multilookup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,17 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "bitset": "cpp"
+        "bitset": "cpp",
+        "codecvt": "cpp",
+        "cstring": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "regex": "cpp",
+        "iomanip": "cpp",
+        "shared_mutex": "cpp",
+        "cinttypes": "cpp",
+        "variant": "cpp"
     },
     "cmake.configureOnOpen": false
 }
