fix resize logic to better uphold invariants

--- a/applications/map/CMakeLists.txt
+++ b/applications/map/CMakeLists.txt
@@ -15,5 +15,5 @@ add_subdirectory("../../deps/catch2" ${CMAKE_CURRENT_BINARY_DIR}/catch2)
 add_executable(test "test.cpp")
 target_link_libraries(test PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
 
-add_executable(driver "driver.cpp")
-target_link_libraries(driver PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
+add_executable(stress_sequential "stress_sequential.cpp")
+target_link_libraries(stress_sequential PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
