finally an end to end test on interleaved multilookup, appears to function correctly

--- a/applications/map/CMakeLists.txt
+++ b/applications/map/CMakeLists.txt
@@ -12,11 +12,11 @@ add_subdirectory("../../libcoro" ${CMAKE_CURRENT_BINARY_DIR}/libcoro)
 add_subdirectory("../../stdcoro" ${CMAKE_CURRENT_BINARY_DIR}/stdcoro)
 add_subdirectory("../../deps/catch2" ${CMAKE_CURRENT_BINARY_DIR}/catch2)
 
-# add_executable(test "test.cpp")
-# target_link_libraries(test PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
+add_executable(test "test.cpp")
+target_link_libraries(test PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
 
-# add_executable(stress_sequential "stress_sequential.cpp")
-# target_link_libraries(stress_sequential PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
+add_executable(stress_sequential "stress_sequential.cpp")
+target_link_libraries(stress_sequential PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
 
 add_executable(stress_interleaved "stress_interleaved.cpp")
 target_link_libraries(stress_interleaved PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
