debug major bug in lookup task, it turns out that references do in fact have reference semantics...

--- a/primitives/async-lock/CMakeLists.txt
+++ b/primitives/async-lock/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 cmake_minimum_required(VERSION 3.17)
 
-project(coro-keywords CXX)
+project(async-lock CXX)
 
 include("../../cmake/coro_config.cmake")
 
