--- a/applications/map/CMakeLists.txt
+++ b/applications/map/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 3.17)
 
 project(coro-map CXX)
 
+set(BENCHMARK_ENABLE_TESTING OFF)
+
 include("../../cmake/threads.cmake")
 include("../../cmake/warnings.cmake")
 include("../../cmake/coro_config.cmake")
@@ -11,13 +13,16 @@ include("../../cmake/coro_config.cmake")
 add_subdirectory("../../libcoro" ${CMAKE_CURRENT_BINARY_DIR}/libcoro)
 add_subdirectory("../../stdcoro" ${CMAKE_CURRENT_BINARY_DIR}/stdcoro)
 add_subdirectory("../../deps/catch2" ${CMAKE_CURRENT_BINARY_DIR}/catch2)
+add_subdirectory("../../deps/benchmark" ${CMAKE_CURRENT_BINARY_DIR}/benchmark)
 
-add_executable(test "test.cpp")
-target_link_libraries(test PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
+# add_executable(test "test.cpp")
+# target_link_libraries(test PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
 
 add_executable(stress_sequential "stress_sequential.cpp")
-target_link_libraries(stress_sequential PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
-target_compile_options(stress_sequential PRIVATE "-ggdb")
+target_link_libraries(stress_sequential PRIVATE coro_config libcoro stdcoro warnings threads)
 
 add_executable(stress_interleaved "stress_interleaved.cpp")
-target_link_libraries(stress_interleaved PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
+target_link_libraries(stress_interleaved PRIVATE coro_config libcoro stdcoro warnings threads)
+
+# add_executable(bench "bench.cpp")
+# target_link_libraries(bench PRIVATE benchmark coro_config libcoro stdcoro Catch2 warnings threads)
