--- a/applications/map/CMakeLists.txt
+++ b/applications/map/CMakeLists.txt
@@ -15,8 +15,8 @@ add_subdirectory("../../stdcoro" ${CMAKE_CURRENT_BINARY_DIR}/stdcoro)
 add_subdirectory("../../deps/catch2" ${CMAKE_CURRENT_BINARY_DIR}/catch2)
 add_subdirectory("../../deps/benchmark" ${CMAKE_CURRENT_BINARY_DIR}/benchmark)
 
-# add_executable(test "test.cpp")
-# target_link_libraries(test PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
+add_executable(test "test.cpp")
+target_link_libraries(test PRIVATE coro_config libcoro stdcoro Catch2 warnings threads)
 
 add_executable(stress_sequential "stress_sequential.cpp")
 target_link_libraries(stress_sequential PRIVATE coro_config libcoro stdcoro warnings threads)
@@ -24,5 +24,8 @@ target_link_libraries(stress_sequential PRIVATE coro_config libcoro stdcoro warn
 add_executable(stress_interleaved "stress_interleaved.cpp")
 target_link_libraries(stress_interleaved PRIVATE coro_config libcoro stdcoro warnings threads)
 
-# add_executable(bench "bench.cpp")
-# target_link_libraries(bench PRIVATE benchmark coro_config libcoro stdcoro Catch2 warnings threads)
+add_executable(bench_sequential "bench_sequential.cpp")
+target_link_libraries(bench_sequential PRIVATE benchmark coro_config libcoro stdcoro Catch2 warnings threads)
+
+add_executable(bench_interleaved "bench_interleaved.cpp")
+target_link_libraries(bench_interleaved PRIVATE benchmark coro_config libcoro stdcoro Catch2 warnings threads)
